--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,28 @@
     <script type="text/javascript" src="/broadway/avc.js"></script>
     <script type="text/javascript" src="/broadway/canvas.js"></script>
   </head>
+  <style type="text/css">
+    html, body, div, canvas {
+      box-sizing: border-box;
+      position: relative;
+      border: 0;
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+
+    #video canvas {
+      background-color: #000000;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      margin: auto;
+    }
+  </style>
   <body>
     <div id="video"></div>
     <script type="text/javascript">
@@ -44,9 +66,19 @@
         };
 
         var resizeCanvas = function (canvas) {
-          var width = window.innerWidth - 64;
-          canvas.style.width = width + "px";
-          canvas.style.height = width / canvas.width * canvas.height;
+          var width = window.innerWidth;
+          var height = window.innerHeight;
+          var windowRatio = window.innerWidth / window.innerHeight;
+          var canvasRatio = canvas.width / canvas.height;
+
+          if (windowRatio > canvasRatio) {
+            width = height * canvasRatio;
+          } else {
+            height = width / canvasRatio;
+          }
+
+          canvas.style.width = width + 'px';
+          canvas.style.height = height + 'px';
         };
 
         var setupCanvas = function (div) {
@@ -57,7 +89,6 @@
 
           canvas.width = width;
           canvas.height = height;
-          canvas.style.backgroundColor = "#333333";
           div.appendChild(canvas);
           resizeCanvas(canvas);
           window.addEventListener('resize', function() { resizeCanvas(canvas); return false; });
